--- a/ci360-react-native-android-app/sdk/latest/example/android/gradle.properties
+++ b/ci360-react-native-android-app/sdk/latest/example/android/gradle.properties
@@ -43,5 +43,5 @@ newArchEnabled=true
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
 com.android.build.api.attributes.AgpVersionAttr=8.6.0
-com.android.build.api.attributes.BuildTypeAttr=debug
+com.android.build.api.attributes.BuildTypeAttr=release
 org.jetbrains.kotlin.platform.type=androidJvm
