--- a/ci360-react-native-android-app/sdk/latest/example/android/app/src/main/assets/SASCollector.properties
+++ b/ci360-react-native-android-app/sdk/latest/example/android/app/src/main/assets/SASCollector.properties
@@ -1,5 +1,5 @@
-tenant.id=aee85757e600010b868fd8f5
-application.id=react_native_demo_app_v3
-tag.server=https://execution-training.ci360.sas.com/t/mobile
+tenant.id=ag3bnd33n2nk10b868fd8f5
+application.id=react_native_app_v3
+tag.server=https://training.ci360.sas.com/t/mobile
 apprelaunch.disabled.on.notification.open=true
 disable.focus.tracking=false
